@@ -5,20 +5,22 @@ AUX qtile-session 1854 SHA256 848ebde7357aa27e94c7b2e6d4f0eb670ce9ddf0528b58e801
 DIST qtile-0.5.tar.gz 317041 SHA256 f80cd73d6655ab53baa6ae11afb9561f724515052e4ba570e6e978abc78c1167 SHA512 2af8a13dcc355b4f556e77a7c78235eb39e9112631750d6680cc1d96c7895ffd3c8ac937ec8b796f4e3f841d39b10aafb930b440addfd8e2fc951e2010e3dc98 WHIRLPOOL d88f70906de570d129aae38ff9ca7a829aa1d9b6d61a179a0cf4ad798d9314c9364a905739168a60b9c37384c13034172920c76cef0981a26df04544e94fe472
 DIST qtile-0.6.tar.gz 257000 SHA256 73508a5ff18579091434131c54aaa3fd4413abe9df4b56962dcbcb6196f1bb36 SHA512 512961f6a47d52d055fe1f7889a5e0c00fe95c55c25f88d1c0d0d3b0253a65579dcbe2cd5c17e04d8a5533e0befc7548c459d64961e2f11f3944803de29e1c25 WHIRLPOOL 5daa3c1464f714c633ac58bb5d56ddcfb8949850475ed155e03eb1ec444c002e4b4f47a3637d2c4e510fea94d69ef1cdc4c8e647bc29dcd62cffb1b95c2326fe
 DIST qtile-0.7.0.tar.gz 265068 SHA256 12bb01dd30d65ed44994f17c2a0e2803b34c108108ac2085aa81e3cd8f3264d9 SHA512 facd319a979bf5dd2ec9c336a203dce197678bcaf02df3208e0ff49cd254683242a76c884f1dccda1689a421a680834aa4194f250e93bbfcf048119148730171 WHIRLPOOL 18024c465cce95f703e2d9bf25f4d4a68197f0429a2c0edadf2e34807127b8248ed80408515ff9d254eb026853350e9291c1da719fe5144608f35eb002c3b26c
+DIST qtile-0.8.0.tar.gz 275673 SHA256 1d7d27da9277ee91e6d60310065be39823c01c715a475935accdb89d3e8e9e98 SHA512 80574b67f46488e384fd4e21e3217d94de9a6a49394fb108775bf89243600d501f104adb260e84ed42312828b4ae0928bfde9b8737eed07060bfc50fb69778d5 WHIRLPOOL e5af8c2b38d4a77dc1c23ea3c3d78210374e4471e8816d1a457cdb8ec240efba95d649f3e3bb53ba46ee3fc7e57c94cac4409122f828efcd17ed4caa2656f142
 EBUILD qtile-0.5-r1.ebuild 1394 SHA256 050d10895a08044fb3d85e25261aad848e43d27d2bc9da0cf5ccfd7c830a5bad SHA512 f908a3d3dd9d9ee4fc8ad9f643e615e639a22cfc2fb16a9b520da619395a720229731af60137657ffbbe04b73a994dd75d5a9c56d1433df1fde01c0a75679139 WHIRLPOOL 2fc1793b9a87889a80215acf47060f42bd1ab78fd69c54d38e778b398302d4640db43f6b81633fd5c7db187225fda93c02afea801a59be717eb59df7bc5d0244
 EBUILD qtile-0.6.ebuild 1369 SHA256 3f86eec0dd9f87bdfad5a113aaee498c4319010f5c8fefa47ffb8db870c59304 SHA512 d9409b2dbd1b138957954a4feca8ad0bc0172a313de41c2c6be4001135367bf11558bdd8c60137f808b34748143610027f95f0b677f51459e8c87465b6ae4d56 WHIRLPOOL e41a919348cd921e9dcf92f78dad642f574c4dd24085bdc9856dcdd05dda19664d655c2da8ea52637e85c1f343b932da7556bd559cb4b1df0feefd2a4ed11d42
 EBUILD qtile-0.7.0.ebuild 1488 SHA256 a5cb930c6f0c39b280a41162dea13c157e0dd7fcafe63e07766ab48be76f2a3c SHA512 3d5376680df59877376c1e2df5ee685c1aa9664a70dd34b139f5a213b877a5bfe45ca622a0614666e869f6f78e24fc9b45c544801097e8a8362fee000eef19ea WHIRLPOOL dbe64c3b81d6b95c6be1f97af17e1d999511cc1c84c5be1a15ef6a2436f24e5513a33f9dc5b2fc28d7fabcc44ace9ff359baf73678568d6b2b62c6c220768c88
+EBUILD qtile-0.8.0.ebuild 1488 SHA256 8ddb21663f93ee830b89c79cdbc0ed5fe1f3127f2f0f338a0a3ae97ff8f2b54c SHA512 d5825dbfe5ea7cfb2fb29552fdcf320f99e9570e9f61b2e301ce72eea0979e997099ac00ef8765ec9983bb40dc508b673db0957118a518944eed82bd4c69f506 WHIRLPOOL 755fcb6aeeae71597e508abf456bd92239e105ade5051f65d3bace8468b8e16da0a87d120f9d7b0de28aa995fab3d62398c34d9b51145b501343c9648db8230a
 EBUILD qtile-9999.ebuild 1487 SHA256 93b0f0abe79cd548a6baa1fadeb82520d73770978188989e836c2ae3927a29b5 SHA512 cd11b2ef7850740f897698f50e5d0d9a8cf1873075065da2a58dcfc53d7316c3af8ce6a84889f4969099faf81caa96e8028799105509c279765976581e65c1d9 WHIRLPOOL d50415a2270f628331aa39ca5e8efeb45e28002a3c02375e968a83f8ce74e12888305f994b15adf9dcb7c8c8fccad1cef46a1195d4625fba712106ca5ee99ab6
-MISC ChangeLog 1677 SHA256 d92bfdf27ff1148a0d807b38b68e5ff9ed729bb1e8f02e39f7525be404fcf6fe SHA512 0394fe85c50d2df45e9547d47d40b7df60b67f23725909c6da8191f0bb01d895a0766013cca79c19f0f9c5b18e97899a5b667d26e4d55b88576b6af850442a56 WHIRLPOOL b2c66475b301ee850c324a8c53741fd4f66b91d1f46ce6ef7efa144aea8eed02d3b693fbb23599863f6b53d7f3209d2e4dc66ee47b9b0c38eb575c88cabfe893
+MISC ChangeLog 1792 SHA256 188e2883102ec7914ea8a61c502db52c4564a4216cdaf755c3da2f20bb4ffc52 SHA512 2a81bd4c836a112c5f66fadea0825b744b56cc63394a47485b26018e6a4bbeccd6fa2238a94dabe667c5a5d356876a4c6c0caa5d28671576058ada06f24af6b1 WHIRLPOOL a3b95b4c3a08c75f1ecc79a8f9f27d4d621c3eba5d437f2aa74c86439548a87957d566132e0ab66b040cbeb0fb81227e82a66f3a2360db4e2753d79e563f8567
 MISC metadata.xml 232 SHA256 a778e40f66cb2fa35529e4f45cb8356c8b1b109163cd939396f02e8ea6aa5f1a SHA512 6952f63da1c92a4ed7ddb87b5eb4003d123f0b7af6ffdbc9118159c97ddf18917e8ac7727285a42c07c64e52a40335bc2ef9f17261557617beb8c2226a391873 WHIRLPOOL 0a4441f075f8af01588da2aac3e03732f93463b8bea5e46749d37e1468452735d15f45243b930b3346c93734f8aa235a492030445fee471a95d2c5998f08e7de
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTPmcKAAoJEEqz6FtPBkyjkH8H/Ap7Ws5k1IYsD7rJ8w/Hmbla
-qnKyT8dhxbxIaiu5CcUNEA8fySVi2QZczpO3tFw64LXe1BXs1Md2spW6CRhPMP5V
-LYo11P+KIRPihCAXwGQtdgZSdoxwqub8yfGBHK/wXgqesf43kMgLtWI5iM0Pdi09
-8t/VEpPZcK+MVDt/aZ7sQmJwVjkRbCCrbLRRFFA90hLFKIsR45jTOh38qU/lHjEs
-FZxfA8wvAdB5XEOafKsrIJaW1zHWVYNkRqElvnLnyOEwhLI3dJ34mD7KfY72q6wv
-jSCJPFd4kMwItBhUJ8pp/cu0PDbFlZNBKvfidRm0468qEzW1wCsgXDm5PXViqsc=
-=sh5A
+iQEcBAEBCAAGBQJT/i2gAAoJEEqz6FtPBkyjZIAIAKI2Cl8RlxC0MG6qPgSg2nvn
+N1xMBPkw0uDypMt4IQ28U3C0ZhqiGEWQiv5ouP9g1bXis6Vm5KUwc8khH8nZyhaR
+2xxggpfby6gw2YH4fk3dl27xxuHVHEuP5QBUrtxuGKzEqXBSwwbvW62339E+SV+i
+RvRg/n9nfYchM2oNg1eWIyOPaWbLivxJUtNkFyOLP3NpTfouqIXb7DD73x+uTWa3
+i9VmA6Hs6uv4Jr6K3TLi0ptsPGcamAqembpg62/aSU/WeyFdXu75KJDDSOoXIVMU
+EYO8S3z/dZMXzKn8Kk5qbSl9GB+Maa8jGrH4vePw//tc0GpUfajvd1mZmmEP/rg=
+=CZFl
 -----END PGP SIGNATURE-----
