@@ -1,6 +1,11 @@
 # ChangeLog for x11-wm/qtile
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/qtile/ChangeLog,v 1.10 2014/04/04 08:02:17 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/qtile/ChangeLog,v 1.11 2014/08/27 19:12:25 radhermit Exp $
+
+*qtile-0.8.0 (27 Aug 2014)
+
+  27 Aug 2014; Tim Harder <radhermit@gentoo.org> +qtile-0.8.0.ebuild:
+  Version bump.
 
 *qtile-0.7.0 (04 Apr 2014)
 
